# django-email-builder

./: .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  Dockerfile  HISTORY.rst  LICENSE  MANIFEST.in  README.rst  ROADMAP.md  docker-compose.yml  requirements.txt  requirements_dev.txt  requirements_test.txt  setup.cfg  setup.py  tasks.py  tox.ini
.github/: ISSUE_TEMPLATE.md  actions.yml
docs/: conf.py  index.rst  installation.rst  usage.rst
email_builder/: apps.py  handlers.py  loading.py  models.py  settings.py  utils.py  validators.py  views.py
email_builder/admin/: admin.py  admin_forms.py
email_builder/api/: serializers.py  urls.py  views.py
email_builder/migrations/: 0001_initial.py  0002_auto_20200729_1809.py
email_builder/templates/admin/email_builder/: email_builder_change_form.html
email_builder/templates/email_templates/: base_mail.html  base_mail.txt
tests/: README.md  email_builder_settings.py  settings.py  test_models.py  test_settings.py  urls.py
tests/example/: urls.py
tests/polls/: apps.py  controllers.py  factories.py
tests/polls/migrations/: 0001_initial.py
